暮春之初，草长莺飞，杂花生树

--- a/algorithm/summary/链表.md
+++ b/algorithm/summary/链表.md
@@ -18,8 +18,7 @@ for (; value > 0; first = second, second = second.next, value--) ;
 ~~~
 
 #### 3. 链表删除元素
-
-~~~
+~~~java
         ListNode head = ListNode.construct(new int[]{1,2,3,4,5});
         ListNode delete = head.next;
         head.next=delete.next;
@@ -28,10 +27,20 @@ for (; value > 0; first = second, second = second.next, value--) ;
 
 #### 4. 插入元素
 
-~~~
+~~~java
         ListNode insert = new ListNode(10);
         insert.next= = head.next;
         head.next=insert;
         System.out.println(head);
 ~~~
 
+#### 5. 翻转链表
+
+~~~java
+   private static ListNode inverse(ListNode head) {
+        ListNode cur=null,next=head;
+        for (ListNode after=next.next; next!=null && after != null;next.next=cur,cur=next,next=after,after=next.next);
+        next.next=cur;
+        return next;
+    }
+~~~
